small html and css updates
mostly small visual changes, words and spacing

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travelogue</title>
+    <title>Europe Travelogue</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -29,7 +29,7 @@
             <img src="./images/paris louvre.jpg" width="300px" alt="The louvre in paris aligned with">
             <p>- Note to self (or anyone who'd like to visit), Bring an umbrella!!</p>
             <p>While I had heard Paris was a rainy city, I somehow had not anticipated that much rain. On the first day, our whole day involved walking, and surprisingly enough, it poured the whole day. I mistakenly wore a dress, which stuck to my legs as I walked all day. (Note: don't wear a dress either.)</p>
-            <p>Besides the rain jokes! One of my favourite memories (ever!) was from my time in Paris. The first night my family and I arrived, it was lightly raining, and we walked around, exploring areas close to our hotel. One of the first places we stopped was Les Colonnes de Buren, a popular art installation with the black and white striped poles. It was late and quiet, and there was no one there. My sister and I danced in the court in the rain, it was incredible. We then headed to see the Louvre, which was freshly sprinkled in a light layer of rain, which also made it quiet and incredibly peaceful. I got one of my best and favourite photos to date there, shown ***.</p>
+            <p>Besides the rain jokes! One of my favourite memories (ever!) was from my time in Paris. The first night my family and I arrived, it was lightly raining, and we walked around, exploring areas close to our hotel. One of the first places we stopped was Les Colonnes de Buren, a popular art installation with the black and white striped poles. It was late and quiet, and there was no one there. My sister and I danced in the court in the rain, it was incredible. We then headed to see the Louvre, which was freshly sprinkled in a light layer of rain, which also made it quiet and incredibly peaceful. I got one of my best and favourite photos to date there, shown above!</p>
             <p>All of our destinations in Paris included; La Sainte Chapelle, La Panthéon, Notre Dame, Le Arc de Triomphe, a climb up to the top of the Eiffel Tower! and an incredible bakery called Angelina's. Seeing the Eiffel Tower sparkle was truly a magical experience that I would highly recommend.</p>
         </section>
 
