--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <section id="london">
             <h2>London</h2>
             <img src="./images/big ben-london.jpg" width="300px" alt="a photo of the clock tower big ben in london, with green trees in the foreground">
-            <p>If, by chance, you were looking for an endless amount of stairs, you would be in luck visiting London! Amongst London's plentiful number of stairs, lies gorgeous architecture, beautiful views, and intriguing history. My visit was sure to include the infamous Buckingham Palace, Westminster Abbey, Big Ben and the London Eye, The London Tower and Bridge, The Sky Gardens and Saint Paul's Cathedral.</p>
+            <p>If, by chance, you were looking for an endless amount of stairs, you would be in luck visiting London! Amongst London's plentiful number of stairs, lies gorgeous architecture, beautiful views, and intriguing history. My visit was sure to include the famous Buckingham Palace, Westminster Abbey, Big Ben and the London Eye, The London Tower and Bridge, The Sky Gardens and Saint Paul's Cathedral.</p>
             <p>Of those, my favourite in regards to history was Westminster Abbey for sure, an audio tour provided insight into events that happened in the very same place you were walking through in that moment. The architecture was also stunning, and never failed to impress me. For architecture though, Big Ben does take the trophy home, as it is just so iconic and gorgeous to finally see in person.</p>
         </section>
 
